Added new paragraph.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
     <h1>Hello, Azure!</h1>
     <p>This is my first static website deployed to Azure.</p>
+    <p>
+        Added a new paragraph to the page.
+    </p>
 </body>
 
 </html>
