Added about page.

--- a/about.html
+++ b/about.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Just Getting Started! - Home</title>
+    <title>Just Getting Started! - About</title>
     <link href="https://cdn.jsdelivr.net" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
-    <h1>Just Getting Started!</h1>
+    <h1>About</h1>
     <p>
-        Welcome to the just-getting-started website. We are learning the ins and outs of modern web workflows.
+        We develop software solutions for organizations of all sizes and shapes.
     </p>
 </body>
 
