--- a/about.html
+++ b/about.html
@@ -10,10 +10,23 @@
 </head>
 
 <body>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+    </ul>
     <h1>About</h1>
     <p>
         We develop software solutions for organizations of all sizes and shapes.
     </p>
+
+    <script type="">
+        fetch('menu.html')
+            .then(response => response.text())
+            .then(html => {
+                document.getElementById('menu-placeholder').innerHTML = html;
+            });
+    </script>
+
 </body>
 
 </html>
