--- a/index.html
+++ b/index.html
@@ -10,10 +10,25 @@
 </head>
 
 <body>
+<ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+</ul>
     <h1>Just Getting Started!</h1>
     <p>
         Welcome to the just-getting-started website. We are learning the ins and outs of modern web workflows.
     </p>
+
+    <script>
+        fetch('menu.html')
+            .then(response => {
+                console.log('here...');
+                response.text();
+            })
+            .then(html => {
+                document.getElementById('menu-placeholder').innerHTML = html;
+            });
+    </script>
 </body>
 
 </html>
