Cleaned up scripts.

--- a/about.html
+++ b/about.html
@@ -19,12 +19,8 @@
         We develop software solutions for organizations of all sizes and shapes.
     </p>
 
-    <script type="">
-        fetch('menu.html')
-            .then(response => response.text())
-            .then(html => {
-                document.getElementById('menu-placeholder').innerHTML = html;
-            });
+    <script>
+
     </script>
 
 </body>
