Added new page.

--- a/products.html
+++ b/products.html
@@ -4,26 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Just Getting Started! - About</title>
+    <title>Just Getting Started! - Products</title>
     <link href="https://cdn.jsdelivr.net" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
-<body><ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="services.html">Services</a></li>
-    <li><a href="products.html">Products</a></li>
-</ul>
-    <h1>About</h1>
+<body>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="products.html">Products</a></li>
+    </ul>
+    <h1>Products</h1>
     <p>
-        We develop software solutions for organizations of all sizes and shapes.
+        Some of the products we provide are...
     </p>
 
     <script>
 
     </script>
-
 </body>
 
 </html>
