--- a/services.html
+++ b/services.html
@@ -14,6 +14,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="services.html">Services</a></li>
+        <li><a href="products.html">Products</a></li>
     </ul>
     <h1>Services</h1>
     <p>
